Bug 81701 - [BDW Regression]igt/gem_reset_stats some subcases cause "[drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem."
Summary: [BDW Regression]igt/gem_reset_stats some subcases cause "[drm:hsw_unclaimed_r...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Rodrigo Vivi
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-24 06:15 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (84.59 KB, text/plain)
2014-07-24 06:15 UTC, Guo Jinxian
no flags Details
dmesg with i915.mmio_debug=1 (95.91 KB, text/plain)
2014-07-25 03:06 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-07-24 06:15:26 UTC
Created attachment 103380 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes

Good commit on -next-queued: 91565c85b66db820f01894a971d39aaef60c4325

Non-working platforms: BDW

==kernel==
--------------------------
origin/drm-intel-nightly: af1aaba219fdd90ca1b30f9b8d8d19352224f170(fails)
    drm-intel-nightly: 2014y-07m-23d-20h-15m-10s integration manifest
origin/drm-intel-next-queued: 2b8ee5710915a244b807fbe3427299d007d19e89(fails)
    drm/i915: Allow overlapping userptr objects  
origin/drm-intel-fixes: eedd10f45bdcb2a5b2afa35f845e080c3bc984f2(works)
    drm/i915: Simplify i915_gem_release_all_mmaps()

==Bug detailed description==
-----------------------------
igt/gem_reset_stats some subcases cause "[drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem."

Output:
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./gem_reset_stats --run-subtest reset-stats-ctx-render
IGT-Version: 1.7-g70e6ed9 (x86_64) (Linux: 3.16.0-rc4_drm-intel-next-queued_2b8ee5_20140724_debug+ x86_64)
Subtest reset-stats-ctx-render: SUCCESS
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# dmesg -r|egrep "<[1-4]>"|grep drm
<3>[  169.278194] [drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.
<3>[  175.277357] [drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.
<3>[  175.278108] [drm:i915_context_is_banned] *ERROR* gpu hanging too fast, banning!
<3>[  181.280352] [drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.
<3>[  181.280605] [drm:i915_context_is_banned] *ERROR* gpu hanging too fast, banning!


Reproduce steps:
-------------------------
1. ./gem_reset_stats --run-subtest reset-stats-ctx-render
Comment 1 Paulo Zanoni 2014-07-24 20:36:30 UTC
Can you please boot with i915.mmio_debug=1, reproduce the bug and attach the log here?
Comment 2 Guo Jinxian 2014-07-25 03:06:09 UTC
Created attachment 103418 [details]
dmesg with i915.mmio_debug=1

(In reply to comment #1)
> Can you please boot with i915.mmio_debug=1, reproduce the bug and attach the
> log here?

root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./gem_reset_stats --run-subtest reset-stats-ctx-render
IGT-Version: 1.7-gbffef22 (x86_64) (Linux: 3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ x86_64)
Subtest reset-stats-ctx-render: SUCCESS
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# dmesg -r|egrep "<[1-4]>"|grep drm            <4>[   90.246324] WARNING: CPU: 0 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[   90.246328] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[   90.246350] CPU: 0 PID: 0 Comm: swapper/0 Not tainted 3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
<4>[   90.246614] WARNING: CPU: 0 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[   90.246617] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[   90.246636] CPU: 0 PID: 0 Comm: swapper/0 Tainted: G        W     3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
<4>[   96.245471] WARNING: CPU: 2 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[   96.245482] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[   96.245517] CPU: 2 PID: 0 Comm: swapper/2 Tainted: G        W     3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
<4>[   96.245865] WARNING: CPU: 2 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[   96.245875] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[   96.245915] CPU: 2 PID: 0 Comm: swapper/2 Tainted: G        W     3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
<4>[  102.248571] WARNING: CPU: 2 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[  102.248579] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[  102.248617] CPU: 2 PID: 0 Comm: swapper/2 Tainted: G        W     3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
<4>[  102.248946] WARNING: CPU: 2 PID: 0 at drivers/gpu/drm/i915/intel_uncore.c:528 hsw_unclaimed_reg_debug.isra.11+0x6c/0x7e [i915]()
<4>[  102.248954] Modules linked in: dm_mod iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm ppdev lpc_ich mfd_core snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq joydev i915 button video drm_kms_helper drm
<4>[  102.249002] CPU: 2 PID: 0 Comm: swapper/2 Tainted: G        W     3.16.0-rc6_drm-intel-nightly_089bea_20140725_debug+ #790
Comment 3 Guo Jinxian 2014-07-28 02:29:12 UTC
Failure still able to reproduce on latest -nightly(e967a525207bd40ab446e2f809907039f88e66f3) while running test igt/drv_debugfs_reader

[root@x-bdw01 tests]# ./drv_debugfs_reader
[root@x-bdw01 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
<3>[   69.154532] [drm:hsw_unclaimed_reg_detect] *ERROR* Unclaimed register detected. Please use the i915.mmio_debug=1 to debug this problem.
Comment 4 Paulo Zanoni 2014-07-28 20:29:45 UTC
I can reproduce this.
Comment 5 yaoming 2014-08-05 08:56:18 UTC
I tested on latest drm-intel-nightly(8980a4380b606860ba0165ed0156a64e79109677) and latest drm-intel-next-queued(a6f9a026761c9c9440bb6a387e84a47d40290176), these sub cases passed.
________________________________________________________________________________
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests#  ./gem_reset_stats --run-subtest reset-stats-ctx-render
IGT-Version: 1.7-gac31f19 (x86_64) (Linux: 3.16.0-rc4_drm-intel-next-queued_a6f9a0_20140805+ x86_64)
Subtest reset-stats-ctx-render: SUCCESS
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests#  dmesg -r|egrep "<[1-4]>"|grep drm
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# uname -a
Linux x-bdw05 3.16.0-rc4_drm-intel-next-queued_a6f9a0_20140805+ #1120 SMP Tue Aug 5 11:42:24 CST 2014 x86_64 x86_64 x86_64 GNU/Linux

commit a6f9a026761c9c9440bb6a387e84a47d40290176
Author: Rodrigo Vivi <rodrigo.vivi@intel.com>
Date:   Fri Aug 1 09:13:28 2014 -0700

    drm/i915: Fix DEIER and GTIER collecting for BDW.

    BDW has many other Display Engine interrupts and GT interrupts registers.
    Collecting it properly on gpu_error_state.

    On debugfs all was properly listed already but besides we were also listing old
    DEIER and GTIER that doesn't exist on BDW anymore. This was causing
    unclaimed register messages:

    https://bugs.freedesktop.org/show_bug.cgi?id=81701

    v2: Fix small issues of first version and don't read DEIER regs when pipe's
        power well is disabled
    v3: bikeshed accepted: use enum pipe pipe instead of int i for pipe interection

    Cc: Paulo Zanoni <paulo.r.zanoni@intel.com>
    Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>
    Reviewed-by: Paulo Zanoni <paulo.r.zanoni@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
________________________________________________________________________________

root@x-bdw05:~# cd /GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests; ./gem_reset_stats --run-subtest reset-stats-ctx-render
IGT-Version: 1.7-gac31f19 (x86_64) (Linux: 3.16.0-rc6_drm-intel-nightly_8980a4_20140805+ x86_64)
Subtest reset-stats-ctx-render: SUCCESS
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests#  dmesg -r|egrep "<[1-4]>"|grep drm
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# uname -a
Linux x-bdw05 3.16.0-rc6_drm-intel-nightly_8980a4_20140805+ #1116 SMP Tue Aug 5 
11:24:43 CST 2014 x86_64 x86_64 x86_64 GNU/Linux

commit 8980a4380b606860ba0165ed0156a64e79109677
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Aug 4 17:24:12 2014 +0200

    drm-intel-nightly: 2014y-08m-04d-17h-23m-47s integration manifest
Comment 6 Rodrigo Vivi 2014-08-06 22:44:10 UTC
Fix landed on -nightly.
Comment 7 Guo Jinxian 2014-08-07 07:31:43 UTC
Verified on latest -nightly(5a299a5a794999ddcc44578c0cfd58da83bac62b)

[root@x-bdw01 tests]# ./gem_reset_stats --run-subtest reset-stats-ctx-render
IGT-Version: 1.7-gac31f19 (x86_64) (Linux: 3.16.0_drm-intel-nightly_5a299a_20140807+ x86_64)
Subtest reset-stats-ctx-render: SUCCESS
[root@x-bdw01 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
[root@x-bdw01 tests]#
Comment 8 Elizabeth 2017-10-06 14:37:03 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.